# navigation_in_point_clouds

./: .gitignore  CMakeLists.txt  change_gps_frame.py  groundPlainExtraction.cpp  height_map.m  height_map.m~  main.cpp  plotColisionMap.m  publish_dummy_tf.py  publish_tf.py
matlab/: groundPlane.m  pointcloudProcess.m
ros_ws/: README.md
ros_ws/src/: .gitignore
ros_ws/src/robot_localization/launch/: ekf.launch  navsat_transform.launch  run.launch
ros_ws/src/robot_localization/params/: ekf_gps.yaml  ekf_param.yaml  navsat_transform_template.yaml
ros_ws/src/robot_localization/script/: change_gps_frame.py  change_imu_frame.py  change_visodom_frame.py  publish_gps_odom.py  publish_tf.py  publish_zedodom_tf.py
ros_ws/src/robot_localization1/launch/: navsat_transform.launch
ros_ws/src/robot_localization1/params/: ekf_param.yaml  navsat_transform_template.yaml
ros_ws/src/traversal_map/: CMakeLists.txt  package.xml
ros_ws/src/traversal_map/src/: pointCloudGroundSegmentation.cpp  pointCloudMap.cpp  pointCloudSub.cpp
