cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(NAVI)
set (CMAKE_CXX_STANDARD 11)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(run main.cpp)
target_link_libraries(run ${PCL_LIBRARIES} ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})